Basic dock mechanisms, GUI atlas support

--- a/Utils/GUISheetCompiler/GUISheetCompiler.vcxproj
+++ b/Utils/GUISheetCompiler/GUISheetCompiler.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Text Include="..\FontCompiler\ReadMe.txt" />
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
