Keyboard handling in console

--- a/Platform/Windows/VS2012/Molotok/Molotok.vcxproj
+++ b/Platform/Windows/VS2012/Molotok/Molotok.vcxproj
@@ -265,6 +265,7 @@
     <ClInclude Include="..\..\..\Common\OpenGLContext.h" />
     <ClInclude Include="..\..\..\Common\PlatformEnvironment.h" />
     <ClInclude Include="..\..\Common\PlatformCommon.h" />
+    <ClInclude Include="..\..\Common\Win_Keys.h" />
     <ClInclude Include="..\..\Common\Win_OpenGL.h" />
     <ClInclude Include="..\..\Common\Win_Timer.h" />
   </ItemGroup>
