--- a/Platform/Windows/VS2012/Molotok/Molotok.vcxproj
+++ b/Platform/Windows/VS2012/Molotok/Molotok.vcxproj
@@ -69,6 +69,7 @@
     <IncludePath>$(SolutionDir);$(IncludePath);$(SolutionDir)\Libs\libpng;$(SolutionDir)\libs\zlib</IncludePath>
     <OutDir>$(SolutionDir)\bin\</OutDir>
     <IntDir>$(SolutionDir)\Build\$(ProjectName)\</IntDir>
+    <LibraryPath>C:\Program Files (x86)\Visual Leak Detector\lib\Win64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(SolutionDir);$(IncludePath);$(SolutionDir)\Libs\libpng;$(SolutionDir)\libs\zlib</IncludePath>
@@ -79,6 +80,7 @@
     <IncludePath>$(SolutionDir);$(IncludePath);$(SolutionDir)\Libs\libpng;$(SolutionDir)\libs\zlib</IncludePath>
     <OutDir>$(SolutionDir)\bin\</OutDir>
     <IntDir>$(SolutionDir)\Build\$(ProjectName)\</IntDir>
+    <LibraryPath>C:\Program Files %28x86%29\Visual Leak Detector\lib\Win32;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>$(SolutionDir);$(IncludePath);$(SolutionDir)\Libs\libpng;$(SolutionDir)\libs\zlib</IncludePath>
