--- a/Platform/Windows/VS2012/Molotok/Molotok.vcxproj.filters
+++ b/Platform/Windows/VS2012/Molotok/Molotok.vcxproj.filters
@@ -231,6 +231,9 @@
     <ClCompile Include="..\..\..\..\Framework\GUI\XGUI_Window.cpp">
       <Filter>Файлы исходного кода\Framework\GUI</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Framework\GUI\XGUI_Menu.cpp">
+      <Filter>Файлы исходного кода\Framework\GUI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Common\ApplicationCommon.h">
@@ -412,6 +415,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\Common\MouseCursor.h">
       <Filter>Заголовочные файлы\Platform\Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\Framework\GUI\XGUI_Menu.h">
+      <Filter>Заголовочные файлы\Framework\GUI</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
